Added swagger spec
