# internal/handlers/delete_user_urls.go
@@ -9,6 +9,16 @@ import (
 	"github.com/arseniy96/url-shortener/internal/storage"
 )
 
+// DeleteUserUrls godoc
+// @Summary      Удаляет ссылки пользователя
+// @Description  Получает на вход массив ссылок и удаляет их
+// @Accept       json
+// @Produce      plain
+// @Param 		 data body models.RequestDeleteUserURLS true "URL для удаления"
+// @Success      202 {string} string{ok}
+// @Failure		 400 {object} object{} "Неверный формат запроса"
+// @Failure		 401 {object} object{} "Unauthorized"
+// @Router       /api/user/urls [delete] .
 func (s *Server) DeleteUserUrls(writer http.ResponseWriter, request *http.Request) {
 	var urls models.RequestDeleteUserURLS
 
