# internal/handlers/resolvelink.go
@@ -9,6 +9,14 @@ import (
 	"github.com/arseniy96/url-shortener/internal/storage"
 )
 
+// ResolveLink godoc
+// @Summary      Делает редирект на оригинальную ссылку
+// @Description  По сокращённой ссылке делает редирект на оригинальную ссылку
+// @Param		 url_id path string true "ID Short URL" example(maIJa1)
+// @Success      307
+// @Failure		 500 {object} object{} "Ошибка сервера"
+// @Header		 307 {string} Location "http://localhost:8080/maIJa1"
+// @Router       /{url_id} [get] .
 func (s *Server) ResolveLink(writer http.ResponseWriter, request *http.Request) {
 	urlID := chi.URLParam(request, "url_id")
 
